icon alignment fixed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,3 +20,11 @@
   padding-left: calc(2 * var(--lineHeight-base));
   padding-right: calc(2 * var(--lineHeight-base));
 }
+
+#resources {
+  margin: 70px;
+}
+
+#environment {
+  margin: 70px;
+}
